# Hydra-Final-V16.5

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PHASE1_SYNC_STATUS.md  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt  smoke_test.py  verify.py
app/api/middleware/: observability.py
app/bot/: handlers.py  keyboards.py  notifier.py  state.py
app/core/: config.py  config_loader.py  db.py  network.py  observability.py  settings.py  storage.py
app/services/: asset_secret_extractor.py  auth_service.py  block_analyzer.py  booking_http.py  booking_orchestrator.py  booking_playwright.py  browser_pool.py  chart_mapper.py  checkout_handler.py  drop_watcher.py  event_discovery.py  event_monitor.py  login_robust.py  perf_cache.py  pre_sale_probe.py  reclassify.py  seat_summarizer.py  seatsio_client.py  seatsio_runtime.py  sniper_engine.py  stealth_client.py  turnstile_solver.py  url_parser.py  webook_api.py  worker_pool.py  ws_sniper.py
app/services/orchestration/: __init__.py  events.py  executor.py  orchestrator.py  pipeline.py  policies.py  scheduler.py  state_machine.py  workers.py
app/services/stealth/: __init__.py  browser_pool.py  context_pool.py  exceptions.py  interfaces.py  manager.py  metrics.py  models.py  nodriver_client.py  patchright_client.py  playwright_client.py  recovery.py  retry.py
app/web/: admin.py  picker.py
docs/: observability.md
migrations/: v14_proxy_per_account.sql
scripts/: render_deploy.py
tests/unit/stealth/: test_orchestrator_smoke.py  test_pool.py  test_retry.py
