[tool.poetry]
name = "hydra-final"
version = "16.5.0"
description = "Hydra Final V16.5 foundation baseline"
authors = ["InnoGuardTech"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = {version = "0.30.6", extras = ["standard"]}
python-dotenv = "1.0.1"
python-multipart = "0.0.12"
curl-cffi = "0.7.4"
nodriver = "0.38"
psycopg2-binary = "2.9.9"
asyncpg = "0.29.0"
aiohttp = "3.10.10"
requests = "2.32.3"
httpx = "0.27.2"
websockets = "13.1"
playwright = "1.48.0"
patchright = "1.48.0.post0"
pydantic-settings = "2.6.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.7.1"
mypy = "1.11.2"
bandit = "1.7.10"
pre-commit = "4.0.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["^data/", "^sessions/"]

[tool.bandit]
exclude_dirs = ["tests", "data", "sessions"]
skips = ["B101"]
