[tool.poetry]
name = "hydra-final"
version = "16.5.0"
description = "Hydra Final V16.5 foundation baseline"
authors = ["InnoGuardTech"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = {version = "0.30.6", extras = ["standard"]}
python-dotenv = "1.0.1"
python-multipart = "0.0.12"
curl-cffi = "0.7.4"
nodriver = "0.38"
psycopg2-binary = "2.9.9"
asyncpg = "0.29.0"
aiohttp = "3.10.10"
requests = "2.32.3"
httpx = "0.27.2"
websockets = "13.1"
playwright = "1.48.0"
patchright = "1.48.0.post0"
pydantic-settings = "2.6.1"
prometheus-client = "0.22.0"
opentelemetry-api = "1.28.2"
opentelemetry-sdk = "1.28.2"
opentelemetry-instrumentation-fastapi = "0.49b2"
opentelemetry-exporter-otlp = "1.28.2"
sentry-sdk = "2.18.0"
structlog = "24.4.0"
pyyaml = "6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "0.7.1"
mypy = "1.11.2"
bandit = "1.7.10"
pre-commit = "4.0.1"
pytest = "8.3.3"
pytest-asyncio = "0.24.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]


[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402", "I001"]
"app/core/config.py" = ["E402", "I001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
files = ["app/core/config.py", "app/core/config_loader.py", "app/core/logging_setup.py", "app/core/observability.py", "app/api/middleware/observability.py", "main.py"]
follow_imports = "skip"
disable_error_code = ["call-arg", "misc", "type-arg"]
exclude = ["^data/", "^sessions/"]

[tool.bandit]
exclude_dirs = ["tests", "data", "sessions"]
skips = ["B101", "B104", "B110"]

[[tool.mypy.overrides]]
module = ["main", "app.core.config", "app.core.config_loader", "app.core.logging_setup", "app.core.observability", "app.api.middleware.observability"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_return_any = false
ignore_errors = true
